src/App.css
@font-face {
  font-family: 'Fira Code';
  src: url('../src/assets/fonts/Fira_Code/static/FiraCode-Regular.ttf');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: 'Fira Code';
  src: url('../src/assets/fonts/Fira_Code/static/FiraCode-Bold.ttf');
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: 'Roboto';
  src: url('../src/assets/fonts/Roboto/Roboto-Regular.ttf');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: 'Roboto';
  src: url('../src/assets/fonts/Roboto/Roboto-Bold.ttf');
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: 'Source Code Pro';
  src: url('../src/assets/fonts/Source_Code_Pro/static/SourceCodePro-Regular.ttf');
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: 'Source Code Pro';
  src: url('../src/assets/fonts/Source_Code_Pro/static/SourceCodePro-Bold.ttf');
  font-weight: 700;
  font-style: normal;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

#main-page {
  scroll-behavior: smooth;
}

.project-swiper .swiper-button-next::after {
  height: 20px !important;
  color: '#64ffda' !important;
}

